<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.vmstudio.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_requisicion"
        android:name="com.vmstudio.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_Requisiciones"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_oc"
        android:name="com.vmstudio.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_ordencom"
        tools:layout="@layout/fragment_slideshow" />
</navigation>