<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/dimRadius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen7"
        android:background="@color/AzulTextoInfo"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvIngreseDatos"
            android:textAlignment="center"
            android:textColor="@color/blanco"
            android:textSize="@dimen/l18"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen1"
        android:layout_marginBottom="@dimen/dimen2"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILnombreConexion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:startIconDrawable="@drawable/ic_server"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TILETnombreConexion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/nombreConexion" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILurl"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen1"
            app:startIconDrawable="@drawable/ic_server"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TILETurl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/url" />

        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen8"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/CVcancelar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cancelar"
                    android:textColor="@color/rojoCancelar"
                    android:textAlignment="center"
                    android:gravity="center"
                    />

            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/divider4"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="?android:attr/listDivider" />

            <androidx.cardview.widget.CardView
                android:id="@+id/CVguardar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/guardar"
                    android:textAlignment="center"
                    android:textColor="@color/azulAceptar"
                    android:gravity="center"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>