<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dimRadius"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen7"
                android:background="@color/AzulTextoInfo"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/opciciones"
                    android:textAlignment="center"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/l18" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/opc1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen8"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen1"
                        android:layout_marginRight="@dimen/dimen1"
                        android:text="@string/definirPricipal"
                        android:textSize="@dimen/l16" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <androidx.cardview.widget.CardView
                android:id="@+id/opc2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen10"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen1"
                        android:layout_marginRight="@dimen/dimen1"
                        android:text="@string/editar"
                        android:textSize="@dimen/l16" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <androidx.cardview.widget.CardView
                android:id="@+id/opc3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen10"
                android:clickable="true"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen1"
                        android:layout_marginRight="@dimen/dimen1"
                        android:text="@string/eliminar"
                        android:textSize="@dimen/l16" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/opc4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen8"
                android:layout_marginTop="@dimen/dimen2"
                android:clickable="true"
                android:elevation="@dimen/dimen03"
                app:cardBackgroundColor="@color/blanco"
                >
                >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/cancelar"
                    android:textAlignment="center"
                    android:textColor="@color/rojoCancelar"
                    android:textSize="@dimen/l16" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>