<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gris1"
    tools:context=".vista.MainActivity">


    <ImageView
        android:id="@+id/btmConfiguraconexion"
        android:layout_width="@dimen/dimen4"
        android:layout_height="@dimen/dimen4"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:onClick="btnIrVistaConexion"
        android:src="@drawable/ic_setting" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:background="@drawable/border_superiores"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen3"
            android:layout_marginRight="@dimen/dimen3"
            android:layout_marginTop="@dimen/dimen3"
            android:layout_marginBottom="@dimen/dimen1"
            android:text="Inicion de sesion"
            android:textSize="@dimen/l18"
            android:textStyle="bold"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen3"
            android:layout_marginRight="@dimen/dimen3"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <View
                    android:id="@+id/divider8"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/logonoil"
                tools:src="@drawable/logonoil"
                tools:srcCompat="@drawable/logonoil" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <View
                    android:id="@+id/divider9"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILUsuario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen3"
            android:layout_marginRight="@dimen/dimen3"
            android:layout_marginTop="@dimen/dimen01"
            android:background="@color/grislijero"
            app:startIconDrawable="@drawable/ic_person"
            android:hint=" "
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TIETUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"
                android:background="@color/grislijero"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILContraena"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen3"
            android:layout_marginRight="@dimen/dimen3"
            android:layout_marginTop="@dimen/dimen2"
            app:startIconDrawable="@drawable/ic_lock"
            app:passwordToggleEnabled="true"
            android:background="@color/grislijero"
            android:hint=" "
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TIETContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@color/grislijero"
                android:hint="@string/contrasena"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen3"
            android:layout_marginRight="@dimen/dimen3"
            android:layout_marginTop="@dimen/dimen1"
            android:checked="true"
            android:text="@string/recordarpass" />

        <Button
            android:id="@+id/btnIngresarLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimenbtn1"
            android:layout_marginLeft="@dimen/dimen3"
            android:layout_marginRight="@dimen/dimen3"
            android:layout_marginTop="@dimen/dimen4"
            android:layout_marginBottom="@dimen/dimen4"
            android:onClick="onclicBtnIngresar"
            android:background="@drawable/borde_redondo_btn"
            android:text="@string/ingresar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Noil App v.1.0"
                android:textAlignment="center"/>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>